[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "twoqdm"
version = "0.3.0"
description = "tqdm with a live rate graph, smarter ETA, and ASCII animations."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Eric Bennett" }
]
keywords = ["tqdm", "progress", "progress-bar", "terminal", "eta", "ascii"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "tqdm>=4.66",
]

[project.urls]
Homepage = "https://github.com/softly-undefined/twoqdm"
Repository = "https://github.com/softly-undefined/twoqdm"
Issues = "https://github.com/softly-undefined/twoqdm/issues"

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "pytest>=8",
    "twine>=5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
